<resources>
    <string name="app_name">Mandaditos Tec</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_mandaderos">Mandaderos</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Mapa</string>

    <!--String para el formulario de pedidos-->
    <string name="tituloPedido">Nuevo pedido</string>
    <string name="seleccionarMandaddero">Seleccionar mandadero</string>
    <string name="nombreMandadero">Nombre del mandadero</string>
    <string name="descripcionPedido">Descripción del pedido</string>
    <string name="detallesPedidpLabel">Detalles del pedido</string>
    <string name="selectDireccion">Seleccionar dirección</string>
    <string name="direccionDestino">Direccion de entrega</string>
    <string name="sinDireccion">Dirección no seleccionada</string>
    <string name="notaMapa">Manten presionado y da clic sobre el marcador o haz clic en el botón, luego haz clic sobre el marcador para seleccionar tu ubicación actual</string>
    <string name="pedidoEnviadoOk">Tu pedido se ha enviado exitosamente, espera la respuesta del mandadero. Tu pedido llegará pronto.</string>
    <string name="pedido_enviado">Pedido enviado</string>
    <string name="pedido_cancelado">Pedido cancelado</string>
    <string name="mensaje_cancelado">Tu pedido ha sido cancelado. Puedes volver y crear un nuevo pedido cuando quieras.</string>
    <string name="enviar_pedido">Enviar pedido</string>
    <string name="mensaje_pregunta">
        Acabas de crear un pedido, pulsa en Aceptar para confirmar los datos y
        enviar tu pedido, o pulsa "Seguir editando" para editar el pedido.</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_detalles_pedido">DetallesPedido</string>
    <string name="large_text">
        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="nombre_cliente">Nombre del cliente</string>
    <string name="residencia_cliente">Residencia del cliente</string>
    <string name="datos_cliente">Nombre y dirección de correo</string>
    <string name="sesion">Sesión</string>
    <string name="info_sesion">Al cerrar sesión saldrás de tu perfil y no podrás realizar pedidos, asi mismo si tienes pedidos pendientes no se te notificará el estado de estos.\n\nPuedes volver a iniciar sesión en cualquier momento.</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="pregunta_cerrar_sesion">¿Estás seguro que quieres cerrar sesión?\n\nAl precionar Aceptar se cerrará la sesión actual y saldrás a la pantalla de logueo\nPuedes volver a iniciar sesión en cualquier momento.</string>
    <string name="direccion_mandado">Dirección del mandado</string>
    <string name="confirmar_recepcion">Confirmar recepción</string>
    <string name="label_confirmar_recepcion">Confirmar reccepción del pedido</string>
    <string name="fecha_pedido">Fecha del pedido</string>
    <string name="contacto">Contacto</string>
    <string name="estado_pedido">Estado del pedido</string>
    <string name="mandadero">Mandadero</string>
    <string name="chat">Chat</string>
    <string name="nuevo_chat">Comenzar un nuevo chat</string>
    <string name="pedido_aceptado">Aceptado y en camino</string>
    <string name="title_activity_bottom_navigation_mandadero">Bottom_navigation_mandadero</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_mapa_mandadero">Mapa</string>
    <string name="pedidosrealizados">PEDIDOS REALIZADOS</string>
    <string name="pedidospendientes">PEDIDOS PENDIENTES</string>
    <string name="pedidosaceptados">PEDIDOS ACEPTADOS</string>
    <string name="title_activity_todos_mandados">TodosMandados</string>
    <string name="cerca_de">Ubicación seleccionada cerca de:</string>
    <string name="confirmar_recepcion_pedido">Estas seguro que deseas confirmar la recepción de tu pedido? Si lo haces estás aceptando que el madadero ha entregado correctamente tu pedido al domicilo que especificaste, después de esto el mandadero se desblinda de cualquier responsabilidad sobre el pedido.</string>
    <string name="title_activity_mapa_destino">Map</string>
    <string name="notaMapa2">La dirección que se muestra en el marcador es la ubicación seleccionada como destino de entrega del pedido, el mandadero deberá entregar el pedido en esta dirección.</string>
    <string name="title_activity_tab_pedidos">TabPedidos</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Pendientes</string>
    <string name="tab_text_2">Aceptados</string>
    <string name="tab_text_3">Finalizados</string>
    <string name="tab_text_4">Rechazados</string>
    <string name="tab_text_5">Realizados</string>
    <string name="descubre">Descubre todas las opciones que ofrece Mandaditos App, seguro que muchas de ellas te serán de utilidad al momento de realizar un pedido de mandado.</string>
    <string name="acceder_lista_pedidos">Accede a tus listas de pedidos o realiza un nuevo pedido. Accede a tu lista de pedidos pendientes, pedidos aceptados, pedidos realizados y pedidos rechazados. Además accede al formulario para crear un nuevo pedido</string>
    <string name="sin_pedidos">Aún no hay pedidos aquí</string>
    <string name="seguir_editando">Seguir editando</string>
    <string name="confirmar_datos">Confirma los datos</string>
    <string name="title_activity_acceder">Acceder</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="sin_cuenta">¿Aún no tienes cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="tipo_cuenta">Seleccione el tipo de cuenta</string>
    <string name="nota_cuenta">
        Seleccione el tipo de cuenta según sus necesidades.\n\nSi desea utilizar
        la aplicación para ofrecer un servicio de mandados cree una cuenta de Mandadero. Si lo que
        desea es realizar pedidos mediante la aplicación cree una cuenta de Cliente.
    </string>
    <string name="cliente">Cliente</string>
    <string name="title_activity_registro_cliente">RegistroCliente</string>
    <string name="title_activity_registro_mandadero">RegistroMandadero</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="con_cuenta">¿Ya tienes una cuenta?</string>
    <string name="status_mandadero">Status del mandadero</string>
    <string name="title_activity_lista_mandaderos">ListaMandaderos</string>
    <string name="lista_mandaderos">Lista de mandaderos</string>
    <string name="numero_pedidos_total">Número de pedidos realizados</string>
    <string name="pedido_pendiente">Pedido pendiente</string>
    <string name="estadisticas">Tus estadísticas</string>
    <string name="title_activity_chat">Chat</string>
    <string name="escrie_un_mensaje">Escribe un mensaje</string>
    <string name="mensaje_prueba">Este es un mensaje de prueba</string>
    <string name="distancia">Distancia</string>
    <string name="acerca_de">Acerca de</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="tuto">Accede a una pequeña guia que te enseña los pasos para crear un pedido y llevar el seguimiento de los mismos.</string>
    <string name="ver_mas">
        Conoce más sobre el equipo de desarrollo, cono ce a cada uno de sus integrantes,
        asi como la misión y visión de la aplicación y mucho más.
    </string>
    <string name="terminos">Echa un vistazo a los términos y condiciones que rijen el funcionamiento de la app. Mantente informado sobre las politicas de uso.</string>
</resources>
