<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.Login.Acceder"
    tools:showIn="@layout/activity_acceder">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_aceptado" />

    <android.support.design.widget.TextInputLayout
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/imgLogin"
        android:textColorHint="@color/blanco"
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/correo"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/blanco"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/txtCorreo"
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAcceder"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContrasena"
        android:layout_centerHorizontal="true"
        android:text="@string/acceder"
        android:textAllCaps="false"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/colorAccent"/>

    <TextView
        android:layout_below="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txtCrearCuenta"
        android:layout_marginEnd="104dp"
        android:text="@string/sin_cuenta"
        android:textColor="@color/azulClaro" />

    <TextView
        android:id="@+id/txtCrearCuenta"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_alignParentEnd="true"
        android:textColor="@color/azul"/>

</RelativeLayout>
