<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/azul">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_gift" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:textColor="@color/azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_recepcion"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirmar_recepcion_pedido"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/btnBotonCancelarConfirmacion"
                android:layout_width="150sp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_boton_dialog_enviar"
                android:text="@string/cancelar"
                android:textAllCaps="false"
                android:textColor="@color/azulObscuro" />

            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/btnBotonAceptarConfirmacion"
                android:layout_width="150sp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_boton_dialog_enviar"
                android:text="@string/aceptar"
                android:textAllCaps="false"
                android:textColor="@color/azulObscuro" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>