<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulClaro"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Cliente.Perfil.FragmentPerfil"
    tools:showIn="@layout/fragment_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/blanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/datos_cliente"
                android:textSize="16sp"/>

            <TextView
                android:gravity="center"
                android:id="@+id/txtNombreClienteP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/nombre_cliente"
                android:textColor="@color/azulObscuro"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/txtCorreoClienteP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:text="@string/residencia_cliente"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/cardview_dark_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadisticas"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:textStyle="bold"/>

            <View
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/cardview_dark_background" />

            <LinearLayout
                android:background="@color/blanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@color/azulClaro"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    style="@style/cardPedidos">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/negro"
                            style="@style/textoTituloPedido"
                            android:text="@string/numero_pedidos_total"/>

                        <TextView
                            android:id="@+id/txtPedidosTotal"
                            android:textColor="@color/azulObscuro"
                            android:textStyle="bold"
                            android:textSize="32sp"
                            style="@style/textoTituloPedido"
                            android:text="@string/numero_pedidos_total"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        app:cardBackgroundColor="@color/azul"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        style="@style/cardPedidos">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/negro"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_1"/>

                            <TextView
                                android:id="@+id/txtPedidosPendientes"
                                android:textColor="@color/blanco"
                                android:textStyle="bold"
                                android:textSize="32sp"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_1"/>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        app:cardBackgroundColor="@color/menta"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        style="@style/cardPedidos">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/negro"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_2"/>

                            <TextView
                                android:id="@+id/txtPedidosAceptados"
                                android:textColor="@color/blanco"
                                android:textStyle="bold"
                                android:textSize="32sp"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_2"/>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        app:cardBackgroundColor="@color/escarlata"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        style="@style/cardPedidos">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/negro"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_4"/>

                            <TextView
                                android:id="@+id/txtPedidosRechazados"
                                android:textColor="@color/blanco"
                                android:textStyle="bold"
                                android:textSize="32sp"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_4"/>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        app:cardBackgroundColor="@color/verde"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        style="@style/cardPedidos">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:textColor="@color/negro"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_3"/>

                            <TextView
                                android:id="@+id/txtPedidosFinalizados"
                                android:textColor="@color/blanco"
                                android:textStyle="bold"
                                android:textSize="32sp"
                                style="@style/textoTituloPedido"
                                android:text="@string/tab_text_3"/>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:background="@color/azulClaro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sesion"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/azulObscuro"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/info_sesion"
                android:textSize="16sp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:layout_marginBottom="10dp"
                android:paddingEnd="15dp"
                android:layout_gravity="center"
                android:text="@string/cerrar_sesion"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:background="@drawable/bg_boton_cerrar_sesion"
                android:textColor="@color/blanco"/>
        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>