<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:baselineAligned="false"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_weight="2"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMandadero"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/scooter"
                android:contentDescription="@string/detallesPedidpLabel" />

        </FrameLayout>

        <LinearLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombreMandadero"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombreMandadero"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/txtEstadoMandadero"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/azul"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/status_mandadero"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgEstadoMandadero"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_status"
                android:tint="@color/negro"
                android:contentDescription="@string/detallesPedidpLabel" />

        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

